add toc to paper/presentation, delete folders not needed for final presentation, merge figures into presentation, create nicer paper with structure

--- a/3-Latex/text/paper/paper.tex
+++ b/3-Latex/text/paper/paper.tex
@@ -18,6 +18,10 @@
 \usepackage{hyperref}
 \usepackage{blindtext} % to generate 2 pages of text
 \usepackage{threeparttable}
+\usepackage{booktabs} % nicer tables w/ mid, top, bottom rules
+\usepackage{dcolumn} % should align decimals in tables
+\newcolumntype{d}[1]{D{.}{.}{#1}} % command for dcolumn, use d{2} instead of l,
+% or c in tabular column specifier
 
 % Biblatex (options taken from Igors Github, is it equal to JoF style?)
 \usepackage[
@@ -30,7 +34,7 @@
 \addbibresource{references.bib}
 
 % Title
-\title{Our Title Page\thanks{Thanks to Alice, Bob, Charlie and Dan for their helpful support.}}
+\title{DTFF Final Project Paper\thanks{Thanks to Alice, Bob, Charlie and Dan for their helpful support.}}
 \author{Egemen Erdogdu\thanks{Egemen Erdogdu, University of Zurich, Rämistrasse 71, 8006 Zürich} \\ University of Zurich \and Jonas Schmidiger\thanks{Jonas Schmidiger, University of Zurich, Rämistrasse 71, 8006 Zürich} \\ University of Zurich \and Mathias Ruoss\thanks{Mathias Ruoss, University of Zurich, Rämistrasse 71, 8006 Zürich}\\ University of Zurich}
 \date{\today}
 
@@ -38,47 +42,96 @@
 % *************** Document ***********************
 \begin{document}
 \maketitle
+% \thispagestyle{empty} % to surpress page numbering in title page
 \begin{abstract}
     This abstract is a groundbreaking summary.
     \blindtext
 \end{abstract}
 
-% Body (2 pages of text generated on https://www.blindtextgenerator.de/ )
-% Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac placerat dolor lectus quis orci. Phasellus consectetuer vestibulum elit. Aenean tellus metus, bibendum sed, posuere ac, mattis non, nunc. Vestibulum fringilla pede sit amet augue. In turpis. Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id purus. Ut varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis diam. Pellentesque ut neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In dui magna, posuere eget, vestibulum et, tempor auctor, justo. In ac felis quis tortor malesuada pretium. Pellentesque auctor neque nec urna. Proin sapien ipsum, porta a, auctor quis, euismod ut, mi. Aenean viverra rhoncus pede. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut non enim eleifend felis pretium feugiat. Vivamus quis mi. Phasellus a est. Phasellus magna. In hac habitasse platea dictumst. Curabitur at lacus ac velit ornare lobortis. Curabitur a felis in nunc fringilla tristique. Morbi mattis ullamcorper velit. Phasellus gravida semper nisi. Nullam vel sem. Pellentesque libero tortor, tincidunt et, tincidunt eget, semper nec, quam. Sed hendrerit. Morbi ac felis. Nunc egestas, augue at pellentesque laoreet, felis eros vehicula leo, at malesuada velit leo quis pede. Donec interdum, metus et hendrerit aliquet, dolor diam sagittis ligula, eget egestas libero turpis vel mi. Nunc nulla. Fusce risus nisl, viverra et, tempor et, pretium in, sapien. Donec venenatis vulputate lorem. Morbi nec metus. Phasellus blandit leo ut odio. Maecenas ullamcorper, dui et placerat feugiat, eros pede varius nisi, condimentum viverra felis nunc et lorem. Sed magna purus, fermentum eu, tincidunt eu, varius ut, felis. In auctor lobortis lacus. Quisque libero metus, condimentum nec, tempor a, commodo mollis, magna. Vestibulum ullamcorper mauris at ligula. Fusce fermentum. Nullam cursus lacinia erat. Praesent blandit laoreet nibh. Fusce convallis metus id felis luctus adipiscing. Pellentesque egestas, neque sit amet convallis pulvinar, justo nulla eleifend augue, ac auctor orci leo non est. Quisque id mi. Ut tincidunt tincidunt erat. Etiam feugiat lorem non metus. Vestibulum dapibus nunc ac augue. Curabitur vestibulum aliquam leo. Praesent egestas neque eu enim. In hac habitasse platea dictumst. Fusce a quam. Etiam ut purus mattis mauris sodales aliquam. Curabitur nisi. Quisque malesuada placerat nisl. Nam ipsum risus, rutrum vitae, vestibulum eu, molestie vel, lacus. Sed augue ipsum, egestas nec, vestibulum et, malesuada adipiscing, dui. Vestibulum facilisis, purus nec pulvinar iaculis, ligula mi congue nunc, vitae euismod ligula urna in dolor. Mauris sollicitudin fermentum libero. Praesent nonummy mi in odio. Nunc interdum lacus sit amet orci. Vestibulum rutrum, mi nec elementum vehicula, eros quam gravida nisl, id fringilla neque ante vel mi. Morbi mollis tellus ac sapien. Phasellus volutpat, metus eget egestas mollis, lacus lacus blandit dui, id egestas quam mauris ut lacus. Fusce vel dui. Sed in libero ut nibh placerat accumsan. Proin faucibus arcu quis ante. In consectetuer turpis ut velit. Nulla sit amet est. Praesent metus tellus, elementum eu, semper a, adipiscing nec, purus. Cras risus ipsum, faucibus ut, ullamcorper id, varius ac, leo. Suspendisse feugiat. Suspendisse enim turpis, dictum sed, iaculis a, condimentum nec, nisi. Praesent nec nisl a purus blandit viverra. Praesent ac massa at ligula laoreet iaculis. Nulla neque dolor, sagittis eget, iaculis quis, molestie non, velit. Mauris turpis nunc, blandit et, volutpat molestie, porta ut, ligula. Fusce pharetra convallis urna. Quisque ut nisi. Donec mi odio, faucibus at, scelerisque quis,
-\Blindtext[12]
+
+
+% table of contents
+\newpage
+\tableofcontents
+\newpage
+
+\section{Introduction}
+\blindtext[2]
+
+
 % \blinddocument
 
 % Citations
 This is a first citation (\cite{Kozlowski2020}). This is a second citation (\cite{Gormsen2020}).
 
-% Graphic
-\begin{figure}[t]
-    % \centering
-    \caption{This is our first figure, taken from Igor's Github repo.}
-    \includegraphics[width=\textwidth]{beta-vs-mu}
-    Note: Some random figure note.
-    \label{fig:1}
-\end{figure}
+\section{Background}
+\blindtext[2]
 
+\section{Dataset}
+\blindtext[2]
 % Table
+% \begin{table}
+%     \centering
+%     \begin{threeparttable}
+%         \caption{This is our first table.} %Title to be above table
+%         \begin{tabular}[t]{lcc}
+%         &Column1&Columm2\\
+%         \hline
+%         John Smith&10&12\\
+%         Jane Doe&15&9\\
+%         Mary Johnson&10&18\\
+%         \end{tabular}
+%         \begin{tablenotes}
+%             \item{Note:} Some random table note. % Note of table
+%         \end{tablenotes}
+%     \end{threeparttable}
+%     \label{table:1}
+% \end{table}
+
 \begin{table}
     \centering
-    \begin{threeparttable}
-        \caption{This is our first table.} %Title to be above table
-        \begin{tabular}[t]{lcc}
-        &Column1&Columm2\\
-        \hline
-        John Smith&10&12\\
-        Jane Doe&15&9\\
-        Mary Johnson&10&18\\
-        \end{tabular}
-        \begin{tablenotes}
-            \item{Note:} Some random table note. % Note of table
-        \end{tablenotes}
-    \end{threeparttable}
-    \label{table:1}
+    \caption{Summary Statistics}
+    \begin{tabular}{@{}ld{3}d{3}d{3}d{3}d{3}d{3}@{}}
+    \toprule
+    \multicolumn{1}{l}{Stock}       & \multicolumn{1}{c}{FB} & \multicolumn{1}{c}{AMZN} & \multicolumn{1}{c}{AAPL} & \multicolumn{1}{c}{NFLX} & \multicolumn{1}{c}{GOOGL} &  \\ \midrule
+    Panel A: Descriptive statistics &        &        &        &        &        &  \\ \midrule
+    Mean                            & 0.083  & 0.065  & 0.112  & 0.051  & 0.091  &  \\
+    Variance                        & 0.041  & 0.030  & 0.044  & 0.061  & 0.037  &  \\
+    Median                          & 0.064  & 0.058  & 0.091  & 0.043  & 0.102  &  \\
+    Maximum                         & 0.053  & 0.064  & 0.078  & 0.043  & 0.062  &  \\
+    Minimum                         & -0.211 & -0.181 & -0.195 & -0.203 & -0.081 &  \\
+    Jarque Bera                     & 95.35   & 81.54   & 49.27   & 40.58   & 0.58   &  \\ \bottomrule
+    \end{tabular}
+    \begin{tablenotes}
+        \item{Note:} Some random table note. % Note of table
+    \end{tablenotes}
+    \label{tab:summary_stat}
 \end{table}
 
+
+\section{Methods}
+\blindtext[2]
+
+\section{Results}
+\blindtext[2]
+% Graphic
+% \begin{figure}[t]
+%     % \centering
+%     \caption{This is our first figure, taken from Igor's Github repo.}
+%     \includegraphics[width=\textwidth]{beta-vs-mu}
+%     Note: Some random figure note.
+%     \label{fig:1}
+% \end{figure}
+
+\begin{figure}
+    \centering
+    \caption{Cumulative Returns of FAANG stocks}    
+    \includegraphics[width=\linewidth]{lineplot_paper}
+    \label{fig:cum_ret_faang}
+  \end{figure}        
+
+\section{Conclusion}
+\blindtext[2]
 
  
 % Clearpage better than \newpage (prints all figures and tables before adding bibliography on a new page)
